Fixed issue where graphs in audience tab are not aligned

--- a/Competitor Dashboard/Dashboard GUI/public/css/audience.css
+++ b/Competitor Dashboard/Dashboard GUI/public/css/audience.css
@@ -38,6 +38,7 @@
     background-color: #2C3546;
     margin-bottom: 50px;
     margin-top: 10px;
+    margin-right: 10px;
 }
 
 #socialmediareach tspan {
